--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Common IntelliJ Platform excludes
-.idea/.idea.ics0031-2022f.dir 
+.idea/**/**/**
 # User specific
 **/.idea/**/workspace.xml
 **/.idea/**/tasks.xml
